<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_bg" >

    <LinearLayout
        android:id="@+id/reLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="85dip"
        android:background="@drawable/input_box_n"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:gravity="center_vertical"
            tools:ignore="UselessParent" >

            <TextView
                android:layout_width="95dip"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/realNameText"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/realName"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_marginLeft="10dip"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/inputRealNameText"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/gray"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reLayout2"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_below="@+id/reLayout1"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="5dip"
        android:background="@drawable/input_box_n"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:gravity="center_vertical"
            tools:ignore="UselessParent" >

            <TextView
                android:layout_width="95dip"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/phoneNum"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/phoneNum"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_marginLeft="10dip"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/inputPhoneNum"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/gray"
                android:textSize="13sp" >

                <requestFocus />
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <!-- <LinearLayout -->
    <!-- android:id="@+id/reLayout3" -->
    <!-- android:layout_width="fill_parent" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_below="@+id/reLayout2" -->
    <!-- android:layout_marginLeft="20dip" -->
    <!-- android:layout_marginRight="20dip" -->
    <!-- android:layout_marginTop="5dip" > -->


    <!-- <RelativeLayout -->
    <!-- android:id="@+id/registerLayout" -->
    <!-- android:layout_width="fill_parent" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:background="@drawable/input_box_aouth_n" > -->


    <!-- <EditText -->
    <!-- android:id="@+id/authCode" -->
    <!-- android:layout_width="fill_parent" -->
    <!-- android:layout_height="40dip" -->
    <!-- android:layout_centerVertical="true" -->
    <!-- android:layout_marginRight="95dip" -->
    <!-- android:background="@color/transparent" -->
    <!-- android:hint="@string/authCode" -->
    <!-- android:inputType="text" -->
    <!-- android:singleLine="true" -->
    <!-- android:textColor="@color/gray" -->
    <!-- android:textSize="15sp" /> -->


    <!-- <TextView -->
    <!-- android:id="@+id/getAuthCode" -->
    <!-- android:layout_width="95dip" -->
    <!-- android:layout_height="40dip" -->
    <!-- android:layout_alignParentRight="true" -->
    <!-- android:layout_centerVertical="true" -->
    <!-- android:gravity="center" -->
    <!-- android:text="@string/getAuthCode" -->
    <!-- android:textColor="@color/white" -->
    <!-- android:textSize="15sp" /> -->
    <!-- </RelativeLayout> -->


    <!-- <LinearLayout -->
    <!-- android:id="@+id/invitationLayout" -->
    <!-- android:layout_width="fill_parent" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:background="@drawable/input_box_n" -->
    <!-- android:visibility="gone" > -->


    <!-- <LinearLayout -->
    <!-- android:layout_width="fill_parent" -->
    <!-- android:layout_height="40dip" -->
    <!-- android:gravity="center_vertical" -->
    <!-- tools:ignore="UselessParent" > -->


    <!-- <TextView -->
    <!-- android:layout_width="85dip" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:gravity="center_horizontal" -->
    <!-- android:text="@string/inviteCode" -->
    <!-- android:textColor="@color/black" -->
    <!-- android:textSize="18sp" /> -->


    <!-- <EditText -->
    <!-- android:id="@+id/invitationNum" -->
    <!-- android:layout_width="fill_parent" -->
    <!-- android:layout_height="40dip" -->
    <!-- android:background="@color/transparent" -->
    <!-- android:gravity="center_vertical" -->
    <!-- android:inputType="text" -->
    <!-- android:singleLine="true" -->
    <!-- android:textColor="@color/gray" -->
    <!-- android:textSize="13sp" /> -->
    <!-- </LinearLayout> -->
    <!-- </LinearLayout> -->
    <!-- </LinearLayout> -->

    <LinearLayout
        android:id="@+id/reLayout4"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_below="@+id/reLayout2"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="5dip"
        android:background="@drawable/input_box_n"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:gravity="center_vertical"
            tools:ignore="UselessParent" >

            <TextView
                android:layout_width="95dip"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/setPwd"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/setPwd"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_marginLeft="10dip"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/inputSetPwd"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/gray"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reLayout5"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_below="@+id/reLayout4"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="5dip"
        android:background="@drawable/input_box_n"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:gravity="center_vertical"
            tools:ignore="UselessParent" >

            <TextView
                android:layout_width="95dip"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/firm_pwd"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/affirmPwd"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_marginLeft="10dip"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/inputFirm_pwd"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/gray"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/reLayout6"
        android:layout_width="fill_parent"
        android:layout_height="55dip"
        android:layout_below="@+id/reLayout5"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="5dip"
        android:layout_centerVertical="true"
        android:orientation="vertical" >


            <TextView
                android:layout_width="95dip"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="用户类型"
                android:textColor="@color/black"
                android:layout_centerVertical="true"
                android:textSize="22sp" />

                <Spinner
                    android:id="@+id/userTypeSpin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dip"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@+id/tyfText"
                    android:entries="@array/user_type" />
    </RelativeLayout>

    <!-- <RelativeLayout -->
    <!-- android:id="@+id/treatyLayout" -->
    <!-- android:layout_width="fill_parent" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_below="@+id/reLayout5" -->
    <!-- android:layout_marginBottom="10dip" -->
    <!-- android:layout_marginLeft="20dip" -->
    <!-- android:layout_marginRight="20dip" -->
    <!-- android:layout_marginTop="15dip" > -->


    <!-- <ImageView -->
    <!-- android:id="@+id/forgetPwdImage" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_centerVertical="true" -->
    <!-- android:layout_marginLeft="5dip" -->
    <!-- android:layout_marginRight="5dip" -->
    <!-- android:background="@drawable/check_button_f" -->
    <!-- tools:ignore="ContentDescription" /> -->


    <!-- <TextView -->
    <!-- android:id="@+id/rememberPwd" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_centerVertical="true" -->
    <!-- android:layout_toRightOf="@+id/forgetPwdImage" -->
    <!-- android:text="@string/registerProtocol" -->
    <!-- android:textColor="@color/blue" -->
    <!-- android:textSize="15sp" /> -->
    <!-- </RelativeLayout> -->


    <!-- <Button -->
    <!-- android:id="@+id/registerBtn" -->
    <!-- android:layout_width="fill_parent" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_below="@+id/treatyLayout" -->
    <!-- android:layout_marginLeft="20dip" -->
    <!-- android:layout_marginRight="20dip" -->
    <!-- android:background="@drawable/button_selector_login" -->
    <!-- android:text="@string/register" -->
    <!-- android:textColor="@color/white" -->
    <!-- android:textSize="18sp" /> -->

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@drawable/exist_selector"
        android:text="@string/register"
        android:textColor="@color/gray_black"
        android:textSize="25sp"
        android:textStyle="bold" />

</RelativeLayout>